add VS2010 support to the DBC->SQL converter
Signed-off-by: Dark <dark_rulerz@hotmail.com>

--- a/DBC_to_SQL/win/VC90/dbctosql.vcproj
+++ b/DBC_to_SQL/win/VC90/dbctosql.vcproj
@@ -210,6 +210,10 @@
 					RelativePath="..\..\src\structs\spell.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\src\structs\item.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="main"
